--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,19 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body, .app-bar-background {
+  background-color: #f4ebea !important;
+}
+
 .App {
   font-family: sans-serif;
-  text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  /* //padding: 10% 0%; */
+}
+
+h3 {
+  color: #ed6c02;
 }
