--- a/src/components/AppBar/AppBarComponent.css
+++ b/src/components/AppBar/AppBarComponent.css
@@ -1,4 +1,4 @@
-.phone-number {
+.telephone-number {
     padding: 15px !important;
     min-width: 200px !important;
     height: 34px;
@@ -9,7 +9,7 @@
     color: #eed26e;
 }
 
-.phone-number:hover{
+.telephone-number:hover{
  background-color: #eed26e;
  color: #fff;
 }
