--- a/src/components/Contact/Contactstyles.css
+++ b/src/components/Contact/Contactstyles.css
@@ -55,3 +55,9 @@
 .contact-grid{
   width:45%;
 }
+
+.map-container{
+  margin-top:5rem;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
+  margin-bottom:5rem;
+}
