--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -16,3 +16,17 @@
     text-decoration: none;
     color: #fff;
 }
+
+.text-more{
+}
+
+.self-image {
+    border: 1px solid #ddd;
+    text-align: center;
+    background: rgb(114 61 61 / 4%);
+    border-radius: 7px;
+}
+
+.self-image  img {
+    border-radius: 10px;
+}
