--- a/src/components/Contact/Contactstyles.css
+++ b/src/components/Contact/Contactstyles.css
@@ -1,63 +1,5 @@
-
-
-.contact-header {
-  font-family: Helvetica;
-  font-size: 24px;
-  font-weight:700;
-  line-height: 32px;
-  letter-spacing: 0.24px;
-  margin-bottom: 2rem;
-  margin-top: 1rem;
-  width:50%;
-}
-.contact-Info {
-  letter-spacing: 1px;
-  padding-left:1.5rem;
-  /* width:50%;
-  margin-left:20px; */
-}
-.place-icon {
-  color: #000; /* Adjust the color as needed */
-  margin-right: 8px;
-  margin-top: 3px;
-}
-
-.telephone-icon, .email-icon, .working-icon {
-  color: #000; /* Adjust the color as needed */
-  margin-right: 8px;
-  margin-top: 1px;
-}
-
-.email-header, .working-header, .phone-header  {
-  margin-top: 1.5rem;
-}
-
-
-.address-text, .telephone-text, .email-text, .working-text{
-  font-family: Helvetica;
-  font-size: 16px;
-  font-weight:400;
-  line-height: 24px;
-  letter-spacing: 0.24px;
-  display: flex;
-  align-items: flex-start;
-  margin-top: 1rem;
-}
-
-.phone-header, .address-header, .email-header, .working-header{
-  font-family: Helvetica;
-  font-size: 18px;
-  font-weight:600;
-  line-height: 32px;
-  letter-spacing: 0.3px;
-}
-
-.contact-grid{
-  width:45%;
-}
-
-.map-container{
-  margin-top:5rem;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
-  margin-bottom:5rem;
+ 
+.icon{
+  vertical-align: middle;
+  margin-right: 0.5rem;
 }
