--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,14 +1,23 @@
-.bannerSvg svg{
-    width: 200px;
-    height: 200px;
-}
-
-.bannerSvg svg rect {
-    fill: #eed26e;
-}
 
 .banner{
     background: #eed26e;
     height: 300px;
     text-align: center;
   }
+.bannerButton button{
+    height: 4rem;
+    border-radius: 4rem;
+    font-weight: 600;
+    background-color: #fff;
+}
+
+a.bannerAppointment{
+    text-decoration: none;
+    color: #eed26e;
+    font-weight: 600;
+}
+
+.bannerText h4 {
+    text-shadow: 2px 0px #ddd;
+    font-family: cursive;
+}
