--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -1,3 +1,9 @@
-.contact-form>div{
+.contact-form>div {
   margin-bottom: 1rem;
+}
+
+.instagram {
+  text-decoration-line: underline;
+  text-decoration-style: dotted;
+  color: #000;
 }
