--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -8,7 +8,7 @@
     height: 4rem;
     border-radius: 4rem;
     font-weight: 600;
-    background-color: #fff;
+    background-color: #0288d1;
 }
 
 .bannerButton button:hover{
@@ -18,7 +18,7 @@
 a.bannerAppointment{
     text-decoration: none;
     color: #eed26e;
-    font-weight: 600;
+font-weight: 600;
 }
 
 .bannerText h4 {
