--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -7,3 +7,15 @@
   text-decoration-style: dotted;
   color: #000;
 }
+
+.appointment button {
+  height: 3rem;
+  border-radius: 0.5rem;
+  color: #4b5742!important;
+  font-weight: 600;
+  background-color: #fff;
+}
+
+.appointment button:hover {
+  background-color: #bbc1b9;
+}
