--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -11,7 +11,7 @@
 .appointment button {
   height: 3rem;
   border-radius: 0.5rem;
-  color: #4b5742!important;
+  color: #4b5742;
   font-weight: 600;
   background-color: #fff;
 }
