--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -13,13 +13,16 @@
     text-transform: uppercase;
     color: #4b5742 !important;
     margin-bottom: 11px;
-    width: 200px;
+    width: 150px;
     text-align: center;
     font-family: Raleway;
     font-weight: 600;
     font-style: normal;
     font-size: 13px;
     letter-spacing: .15em;
+    @media only screen and (max-width: 1024px) { 
+        width: 100px;
+    }
    
 }
 .navigation-wrapper button span:hover{
@@ -34,6 +37,9 @@
     border-radius: 8px;
     font-size: 11px !important;
     text-decoration: underline;
+    @media only screen and (min-width:768px) and (max-width: 1024px) { 
+       margin-left: 74px;
+    }
 }
 
 /* Mobile stylings */
