--- a/src/components/AppBar/AppBarComponent.css
+++ b/src/components/AppBar/AppBarComponent.css
@@ -1,58 +1,96 @@
 .telephone-number {
-    padding: 15px !important;
-    min-width: 200px !important;
-    height: 34px;
-    border-radius: 10px !important;
-    border: 2px solid #eed26e !important;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #eed26e !important;
+  padding: 15px !important;
+  min-width: 200px !important;
+  height: 34px;
+  border-radius: 10px !important;
+  border: 2px solid #eed26e !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #eed26e !important;
 }
 
-a.telephone-number:hover{
- background-color: #eed26e;
- color: #fff !important;
+a.telephone-number:hover {
+  background-color: #eed26e;
+  color: #111 !important;
 }
 
-.menuIcon{
-    color: #4b5742 !important;
+.menuIcon {
+  color: #ffffff !important;
 }
 
-.logo{
-    cursor: pointer;
-    width: 300px;
+.logo {
+  cursor: pointer;
+  width: 100px;
 }
-.appBarStyle{
-    flex-direction: row;
-    padding: 30px 0% 30px 0%;
-    justify-content: space-evenly;
-    flex-wrap: nowrap !important;
-    
+
+.centerLogo {
+  filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.35));
+}
+
+/* AppBar root styles moved from inline sx */
+.topAppBar {
+  background: transparent !important;
+  box-shadow: none !important;
+  color: #fff;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  border-style: solid;
+  border-width: 0px 0px 1px 0px;
+  border-color: #ffffff0f;
+  margin-top: 0px;
+  padding: 10px 0px 10px 0px;
+  z-index: 9;
+  height: 150px;
+}
+
+.appBarStyle {
+  flex-direction: row;
+  padding: 18px 5% 12px 5%;
+  justify-content: space-between;
+  flex-wrap: nowrap !important;
+  max-width: 1170px;
+  margin: 0 auto;
+  height: 150px;
+}
+
+.navGroup .navLink {
+  color: #ffffff !important;
+  font-family: Raleway, sans-serif;
+  letter-spacing: 0.18em;
+  font-size: 12px;
+  margin: 0 8px;
+}
+
+.navGroup .navLink:hover {
+  color: #eed26e !important;
 }
 
 @media only screen and (max-width: 1024px) {
-    .logo{
-      width: 200px;
-    }
+  .logo {
+    width: 100px;
   }
+}
+
 @media only screen and (min-width: 426px) and (max-width: 768px) {
-    
-    .appBarStyle{
-       flex-direction: column;
-       flex-wrap: wrap !important;
-       justify-content: center;
-    }
+  .appBarStyle {
+    flex-direction: column;
+    flex-wrap: wrap !important;
+    justify-content: center;
+    height: 150px;
   }
+}
+
 @media only screen and (max-width: 425px) {
-    
-    .appBarStyle{
-       flex-direction: column;
-       flex-wrap: wrap !important;
-       justify-content: space-between;
-       padding: 0%;
-    }
-    .logo{
-        width: 100px;
-    }
+  .appBarStyle {
+    flex-direction: row;
+    flex-wrap: wrap !important;
+    justify-content: space-between;
+    padding: 8px 12px;
+    height: 150px;
   }
-  
+  .logo {
+    width: 100px;
+  }
+}
