--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -43,7 +43,9 @@
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
-  touch-action: auto;
+  touch-action: pan-x;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 
   /* Hide scrollbar by default - will show only on mobile */
   scrollbar-width: none; /* Firefox */
